src/snapshots/zeek_language_server__ast__test__resolve_type-5.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "double",
    fqid: "double",
    kind: Builtin(
        Double,
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'double'",
}
