src/snapshots/zeek_language_server__ast__test__resolve_type-6.snap
---
source: src/ast.rs
expression: typ
---
Decl {
    module: Global,
    id: "int",
    fqid: "int",
    kind: Type(
        [],
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'int'",
}
