src/snapshots/zeek_language_server__ast__test__resolve_type-7.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: u!("interval"),
    fqid: u!("interval"),
    kind: Builtin(
        Interval,
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'interval'"),
}
