src/snapshots/zeek_language_server__ast__test__resolve_type-8.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: u!("subnet"),
    fqid: u!("subnet"),
    kind: Builtin(
        Subnet,
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'subnet'"),
}
