src/snapshots/zeek_language_server__ast__test__resolve_type-9.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "pattern",
    fqid: "pattern",
    kind: Builtin(
        Pattern,
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'pattern'",
}
