src/snapshots/zeek_language_server__ast__test__resolve_type.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: u!("addr"),
    fqid: u!("addr"),
    kind: Builtin(
        Addr,
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'addr'"),
}
