src/snapshots/zeek_language_server__ast__test__typ_builtin-10.snap
---
source: src/ast.rs
expression: "(line,\ncrate::ast::resolve(&db.0,\nNodeLocation::from_range(uri,\nRange::new(pos, pos))).and_then(|d| crate::ast::typ(&db.0, d)))"
---
(
    "            global f = 0.1234;",
    Some(
        Decl {
            module: Global,
            id: u!("double"),
            fqid: u!("double"),
            kind: Builtin(
                Double,
            ),
            is_export: None,
            loc: None,
            documentation: u!("Builtin type 'double'"),
        },
    ),
)
