src/snapshots/zeek_language_server__ast__test__typ_builtin-11.snap
---
source: src/ast.rs
expression: "(line,\ncrate::ast::resolve(&db.0,\nNodeLocation::from_range(uri,\nRange::new(pos, pos))).and_then(|d| crate::ast::typ(&db.0, d)))"
---
(
    "            global b1 = T;",
    Some(
        Decl {
            module: Global,
            id: u!("bool"),
            fqid: u!("bool"),
            kind: Builtin(
                Bool,
            ),
            is_export: None,
            loc: None,
            documentation: u!("Builtin type 'bool'"),
        },
    ),
)
