src/snapshots/zeek_language_server__ast__test__typ_builtin-4.snap
---
source: src/ast.rs
expression: "(line,\ncrate::ast::resolve(&db.0,\nNodeLocation::from_range(uri,\nRange::new(pos, pos))).and_then(|d| crate::ast::typ(&db.0, d)))"
---
(
    "            global i1 = 1.1.1.1;",
    Some(
        Decl {
            module: Global,
            id: u!("addr"),
            fqid: u!("addr"),
            kind: Builtin(
                Addr,
            ),
            is_export: None,
            loc: None,
            documentation: u!("Builtin type 'addr'"),
        },
    ),
)
